# dotfiles

./: .Xresources  .aider.conf.yml  .bash_aliases  .bash_path  .bashrc  .condarc  .editorconfig  .gitconfig  .gitconfig.extend  .gitconfig.template  .gitignore  .npmrc  .ohmyzshrc  .profile  .sh_aliases  .sh_func  .sh_hooks  .sh_path  .sh_platform_pi4  .sh_platform_wsl  .sh_vars  .shrc  .shrc.headless  .stow-ignore  .tmux.conf  .weeaboo.gitconfig  .work.collab.gitconfig  .work.gitconfig  .xsessionrc  .zprofile  .zshrc  bootstrap.sh  config
.SpaceVim.d/: init.toml
.SpaceVim.d/autoload/: init.vim  vim_lsc_config.vim
.agents/: .gitignore  .skill-lock.json  AGENTS.md  ai-modernization-services.md  mcp.json  settings.json
.agents/agents/: architect-detail.md  architect.md  challenger.md  cheap.md  code.md  debug.md  devsecops.md  editor.md  explore.md  fastcode.md  frontend.md  general.md  git-supervisor.md  orchestrator.md  plan.md  qwen.md  requirements-executor.md  requirements-prd-writer.md  requirements-proofreader.md  requirements-reviewer.md  requirements-spec-writer.md  requirements-trd-writer.md  requirements-verifier.md  research.md  review.md  senior-architect.md  senior-code.md  swarm-node.md  ui-polish.md  ui-prototype.md
.agents/commands/: benchmark-agents.md  benchmark-agents.prompt.md  bounded-iteration.prompt.md  brainstorming.md  brainstorming.prompt.md  cv-screening.md  cv-screening.prompt.md  data-storytelling.md  external-subagent.prompt.md  grill-me.prompt.md  handoff.md  handoff.prompt.md  index-docs.md  index-docs.prompt.md  index.md  memory.prompt.md  party-mode.prompt.md  ralph-loop.md  ralph-loop.prompt.md  requirements-lifecycle.md  requirements-lifecycle.prompt.md  review.md  review.prompt.md  shard-doc.md  shard-doc.prompt.md  swarm.md  swarm.prompt.md  sync-mcp.prompt.md  sync-remote-skills.md  sync-remote-skills.prompt.md  sync-skill-dna.md  sync-skill-dna.prompt.md
.agents/docs/: README.md  ai-agent-skills-and-rules-engineering.md  ai-augmented-project-setup-and-evolution.md  quality-tooling-comparison-matrix.md  quality-tooling-for-ai-projects.md  quality-tooling-stack-baselines.md
.agents/handoffs/: README.md  global--kilo-config-model-audit.md  master--agents-review-and-handoff.md
.agents/instructions/: agent-instructions.md  git-safety.md  process-management.md
.agents/prompts/: brainstorming.prompt.md  cv-screening.prompt.md  handoff.prompt.md  index-docs.prompt.md  index.prompt.md  party-mode.prompt.md  ralph-loop.prompt.md  requirements-lifecycle.prompt.md  review.prompt.md  shard-doc.prompt.md  sync-mcp.prompt.md  sync-remote-skills.prompt.md  sync-skill-dna.prompt.md
.agents/rules/: INDEX  autonomy-safety.md  code-quality.md  command-routing.md  execution-safety.md  git-safety.md  grooming.md  handoff.md  memory-checkpoint.md  memory.md  requirements-driven-dev.md  self-grounded-verification.md  skill-compliance.md  skills-discovery.md  slicing.md  tdd.md  ubiquitous-language.md  workflow-routing.md
.agents/scripts/: gap-check.sh  sync-remote-skills.sh  sync-remotes.sh  sync-skill-dna.sh
.agents/skills/: INDEX.md  WIRING.md  index.md  remote-skills-manifest.json  skill-dna-manifest.json
.agents/workflows/: index.md
.config/: redshift.conf  starship.toml
.config/alacritty/: alacritty.yml
.config/cliproxyapi/: .gitignore  cliproxyapi.conf.template
.config/conky/: conky.sh  conky_maia
.config/helix/: config.toml  languages.toml
.config/iterm/: com.googlecode.iterm2.plist
.devpod/: config.yaml
.gemini/: .gitignore  GEMINI.md  workflows
.gitconfig.d/: .interk.gitconfig  .nerd.gitconfig  .work.gitconfig
.hermes/: .env.example  .gitignore  SOUL.md  config.yaml
.i3/: config
.innoobwetrust/: pkgx.yml
.innoobwetrust/life_hacks/social-pressing/: .gitignore  Cargo.toml  Makefile.toml  pkgx.yml
.innoobwetrust/life_hacks/social-pressing/src/: constants.rs  driver.rs  fb.rs  instagram.rs  main.rs  tiktok.rs  utils.rs
.sh.d/: .bashrc  .zshrc  aliases.sh  completion.sh  func.sh  hooks.sh  path.sh  platform_pi4.sh  platform_raspbian.sh  platform_wsl.sh  starship-lazy.sh  vars.sh  x-cmd-lazy.sh
.shortcuts/: auto_update  weather
.tmux/: tmux.conf
.vim_runtime/: README.md  install_awesome_vimrc.sh  my_configs.vim  update_plugins.py
life_hacks/social-pressing/: .gitignore  Cargo.toml
life_hacks/social-pressing/src/: driver.rs  fb.rs  instagram.rs  main.rs  tiktok.rs  utils.rs
life_hacks/tiktok/tiktok-pressing/: Cargo.toml
life_hacks/tiktok/tiktok-pressing/src/: main.rs
life_hacks/udemy/: .env.example  .gitignore  Cargo.toml  config.sample.ini  courson_parser.py  discudemy_parser.py  parser_lib.py  pyproject.toml  real_discount_parser.py  requirements.txt  udemy.py  view.nu
life_hacks/udemy/src/: lib.rs  main.rs
notitrans/: notitrans-en  notitrans-vi
project_templates/: .editorconfig  .eslintrc.nuxt3.typescript.js  .gitpod.yml  .lintstagedrc.eslint.json  Cargo.toml  devcontainer.typescript.json  pyproject.toml
remote_ide/: setup.sh  setup_dart.sh  setup_flutter.sh  setup_miniconda3.sh  setup_neovim.sh  setup_neovim_recent_ubuntu.sh  update_system.sh
(+561 files in other folders)
