[package]
name = "social-pressing"
description = "A tool for wiping out trashes on social media. Let's wipe out all the trashes to make the world a better place. Remember, blood must be spilled for the sake of justice, we choose to be evil to fight the evils around us, then self-destruct after the world became a better place as our own self has become the very evil that we fought against. - InNoobWeTrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
fantoccini = "0.19.3"
futures = "0.3.30"
humantime = "2.1.0"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
