[package]
name = "udemy-devourer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
grammers-client = "0.7.0"
grammers-tl-types = "0.7.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.11.0"
tokio = { version =  "1.40.0", features = ["rt-multi-thread", "macros"] }
