[tool.poetry]
name = "Udemy Couponator!"
version = "0.1.0"
description = ""
authors = ["InNoobWeTrust"]
license = "WTFPL"
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.28.5"
requests-html = "^0.10.0"
pyppeteer = "^1.0.2"
pyquery = "^2.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"

[tool.poe.tasks]
udemy   = { shell = "poetry run python udemy.py" }
courson-parse   = { shell = "until poetry run python courson_parser.py; do sleep 30; done" }
discudemy-parse   = { shell = "until poetry run python discudemy_parser.py; do sleep 30; done" }
realdiscount-parse   = { shell = "until poetry run python real_discount_parser.py; do sleep 30; done" }
parse = ["courson-parse", "discudemy-parse", "realdiscount-parse"]
clean = { shell = "trash *.txt" }
all = ["udemy", "parse"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
